--- Auto-Git Commit ---

--- a/Linux/Learning/Linux性能优化/第3章 性能工具: 系统内存/2. Linux性能工具: CPU与内存.md
+++ b/Linux/Learning/Linux性能优化/第3章 性能工具: 系统内存/2. Linux性能工具: CPU与内存.md
@@ -34,9 +34,132 @@ vmstat [-a] [-s] [-m]
 ## 用法示例
 
 如前面章节所见，清单3.2中，如果vmstat调用时没有使用任何命令行选项，它显示的是从系统启动开始的性能统计数据的均值（si和so），以及其他统计信息的瞬时值（swpd、free、buff和cache）。本例中，我们可以看到系统已经有大约500MB的内存交换到了硬盘。约14MB系统内存是空闲的。约4MB用于缓冲区，以保存还未刷新到硬盘的数据。约627MB用于硬盘缓存，以保存过去从硬盘读取的数据。
+
 清单3.2
+
+![2019-12-08-15-28-54.png](./images/2019-12-08-15-28-54.png)
 ￼
 在清单3.3中，我们要求vmstat显示活跃与非活跃页面的数量信息。非活跃页面的数量表明了有多少内存可以交换到硬盘，有多少内存是当前可用的。本例中，我们可以看到活跃内存有1310MB，只有78MB被认为是不活跃的。该机拥有大量内存，且大部分都被使用，处于活跃状态。
+
 清单3.3
+
+![2019-12-08-15-29-26.png](./images/2019-12-08-15-29-26.png)
 ￼
 接下来，在清单3.4中，我们看到的是一个不同的系统，其内存数据交换频繁。si列显示在每个采样期间，数据的读交换率分别为480KB、832KB、764KB、344KB和512KB。so列显示在每个采样期间，内存数据写交换率分别为9KB、0KB、916KB、0KB、1068KB、444KB和792KB。这些结果可以说明该系统没有足够的内存来处理所有的运行进程。当一个进程的内存被保存下来，以便为之前已经交换到硬盘的应用程序腾位置时，就会出现高频率的换入和换出。如果有两个运行程序需要的内存量都超过了系统可提供的量，后果就会很糟糕。比如，两个进程都在使用大量内存，且它们都试图同时运行，而每个进程都可以导致另一个的内存被写交换。当一个程序需要一块内存时，它就会把另一个程序需要的一块内存踢出去。而当另一个应用程序开始运行时，它又会把第一个程序正在使用的一块内存踢出去，并等待自己的内存块从交换分区加载进来。这可能会导致两个应用程序出现停顿，以等待它们的内存从交换分区取回，然后才能继续执行。只要一个程序进步一点点，它就会将另一个进程使用的内存交换出去，从而导致这个程序慢下来。这种情况被称为颠簸。发生颠簸时，系统会花大量的时间将内存读出或写入交换分区，系统性能就会急剧下降。
+
+具体到这个例子，交换最终停止了，最有可能的原因是交换到硬盘的内存不是第一个进程立即需要的。这就意味着交换是有效的，不是正在使用的内存内容被写入到硬盘，然后内存就会分配给需要它的进程。
+
+清单3.4
+
+![2019-12-08-15-30-18.png](./images/2019-12-08-15-30-18.png)
+￼
+清单3.5在前面的章节已经给出了，如其所示，vmstat可以展示很多种不同的系统统计信息。现在当我们查看它时，我们可以看到一些相同的统计数据以不同的输出模式呈现，比如active、inactive、buffer、cache和used swap。但是也出现了一些新的统计信息，如total memory，该数据表示系统总共有1516MB内存；total swap，该数据表示系统总共有2048MB的交换分区。当试图确定交换分区和当前使用内存的百分比时，了解系统总量是有帮助的。另一个有趣的统计信息是pages paged in，它表示从硬盘读入的页面总数。这个统计信息包括启动应用程序读取的页面，以及该应用程序本身可以使用的页面。
+
+清单3.5
+
+![2019-12-08-15-30-41.png](./images/2019-12-08-15-30-41.png)
+￼
+最后，在清单3.6中，我们看到vmstat可以提供关于Linux内核如何分配其内存的信息。如前所述，Linux内核有一系列“分片”来保存其动态数据结构。vmstat显示每一个分片（Cache），展示使用了多少元素（Num），分配了多少（Total），每个元素的大小（Size），整个分片使用了多少内存页（Pages）。这些信息有助于跟踪内核究竟是怎样使用其内存的。
+
+清单3.6
+￼
+![2019-12-08-15-31-01.png](./images/2019-12-08-15-31-01.png)
+
+![2019-12-08-15-31-06.png](./images/2019-12-08-15-31-06.png)
+￼
+vmstat提供了一种简便的方法来抽取大量的Linux内存子系统的信息。与默认输出界面上的其他信息结合起来，它就展示出了一个关于系统运行状况和资源使用情况的图象。
+
+# top（2.x和3.x）
+
+前面章节已经讨论过，top能同时给出系统级或特定进程的性能统计信息。默认情况下，top展示的是对进程的CPU消耗量进行降序排列的列表，但它也可以调整为按内存使用总量排序，以便你能跟踪到哪个进程使用的内存最多。
+
+## 内存性能相关的选项
+
+top不用任何特定命令行选项来控制其显示内存统计信息。它的调用命令行如下：
+
+```
+top
+```
+￼
+不过，一旦开始运行，top允许你选择显示系统级内存信息，还是显示按内存使用量排序的进程。按内存消耗量排序被证明对确定哪个进程消耗了最多内存是非常有帮助的。表3-3说明了不同的与内存相关的切换项。
+
+表3-3 top运行时切换项
+
+![2019-12-08-15-32-10.png](./images/2019-12-08-15-32-10.png)
+￼
+表3-4给出了top能提供的整个系统以及单个进程的内存性能统计数据。top有两个不同的版本2.x和3.x，它们在输出统计数据的名称上有些微差异。表3-4对两个版本的名称都进行了说明。
+
+表3-4 top内存性能统计信息
+
+![2019-12-08-15-32-22.png](./images/2019-12-08-15-32-22.png)
+￼
+top提供了不同运行进程的大量的内存信息。如同后续章节将会讨论的，你可以使用这些信息来确定应用程序究竟是如何分配和使用内存的。
+
+## 用法示例
+
+清单3.7与前面章节给出的top运行示例相似。不过这个例子中，请注意在缓冲区中有大约84MB是空闲的，而总的物理内存容量为1024MB。
+
+清单3.7
+
+![2019-12-08-15-33-00.png](./images/2019-12-08-15-33-00.png)
+
+![2019-12-08-15-33-05.png](./images/2019-12-08-15-33-05.png)
+
+和前面一样，top可以被定制为只显示观察过程中你感兴趣的内容。清单3.8给出的高度配置界面只显示了内存性能统计信息。
+
+清单3.8
+
+![2019-12-08-15-33-43.png](./images/2019-12-08-15-33-43.png)
+￼
+top提供了对内存统计数据的实时更新，并显示了哪个进程正在使用哪种类型的内存。当我们调查应用程序内存使用情况时，这些信息就变得有用了。
+
+# procinfo（II）
+
+正如我们在前面看到的，procinfo提供的是系统级性能特性的概览。除了前面章节描述过的统计数据外，procinfo还提供了一些内存统计数据，与vmstat和top类似，这些数据表明了当前内存是如何被使用的。
+
+## 内存性能相关的选项
+
+procinfo没有任何选项来修改其内存统计信息的显示输出，因此其调用命令如下：
+￼
+```
+procinfo
+```
+
+procinfo显示的是基本内存系统的内存统计信息，与top和vmstat类似，如表3-5所示。
+
+表3-5 procinfo内存统计信息
+
+![2019-12-08-15-34-57.png](./images/2019-12-08-15-34-57.png)
+￼
+与vmstat和top非常相似，procinfo是一种低开销的命令，它适于长时间在控制台或屏幕窗口中运行。它为系统运行状况和性能提供了良好的指示。
+
+## 用法示例
+
+清单3.9是procinfo的典型输出。如同你所看到的，它报告了系统使用虚拟内存的总体信息。在这个例子中，系统总共有312MB内存，其中有301MB被内核和应用程序使用，11MB为系统缓冲区，还有11MB完全没有被使用。
+
+清单3.9
+
+![2019-12-08-15-35-23.png](./images/2019-12-08-15-35-23.png)
+￼
+procinfo在单一信息屏中提供系统性能信息。虽然它给出了一些重要的内存统计数据，但vmstat或top更适合于调查系统级的内存使用情况。
+
+# gnome-system-monitor（II）
+
+gnome-system-monitor在许多方面就是top的图形表示。它使你能监控单个进程，并从它显示的图形上来观察系统负载。同时，它还提供了CPU和内存使用情况的基本图形。
+
+## 内存性能相关的选项
+
+gnome-system-monitor可以从Gnome菜单调用。（Red Hat 9及更高版本中，在System Tools→System Monitor选项下。）不过，它也可以用下面的命令行来调用：
+
+```
+gnome-system-monitor
+```
+￼
+gnome-system-monitor没有相关的命令行选项能影响内存性能测量。
+
+## 用法示例
+
+当你启动gnome-system-monitor，并选择System Monitor标签后，你可以看到如图3-1所示的窗口。这个窗口使你能浏览图形，看看当前已经使用了多少物理内存和交换分区，以及使用情况随时间发生的变化。在这个例子中，我们看到1007MB的总量中已经使用了969MB，且内存使用量在一段时间内是比较平稳的。
+
+![2019-12-08-15-38-14.png](./images/2019-12-08-15-38-14.png)
+
