--- Auto-Git Commit ---

--- a/Linux/Learning/Linux性能优化/第3章 性能工具: 系统内存/2. Linux性能工具: CPU与内存.md
+++ b/Linux/Learning/Linux性能优化/第3章 性能工具: 系统内存/2. Linux性能工具: CPU与内存.md
@@ -163,3 +163,53 @@ gnome-system-monitor没有相关的命令行选项能影响内存性能测量。
 
 ![2019-12-08-15-38-14.png](./images/2019-12-08-15-38-14.png)
 
+gnome-system-monitor提供的数据图形视图使得对系统的观察更容易也更迅速，但是，却缺少了大部分的细节，比如内存是如何使用的。
+
+# free
+
+free提供的是系统使用内存的总体情况，包括空闲内存量。虽然free命令可能会显示一个特定系统没有多少空闲内存，但这不一定是坏事。Linux内核不会让空闲内存一直闲着，而是会将它作为高速缓存用于硬盘读，或是作为缓冲区用于硬盘写。这可以显著提升系统性能。由于这些高速缓存和缓冲区总是可以被丢弃的，所以，当应用程序需要时这些内存还是可以使用的，free显示的是空闲内存容量加上或减去这些缓冲区的容量。
+
+## 内存性能相关的选项
+
+用下面的命令行可以调用free：
+
+```
+free [-l] [-t] [-s delay] [-c count]
+```
+￼
+表3-6说明的参数可以修改free显示的统计信息类型。与vmstat非常相似，free可以周期性地显示更新内存统计数据。
+
+表3-6 free命令行选项
+
+![2019-12-08-15-46-49.png](./images/2019-12-08-15-46-49.png)
+￼
+free实际上显示了一些所有内存统计工具的最完整的内存统计信息。这些统计信息如表3-7所示。
+
+表3-7 free 内存统计信息
+
+![2019-12-08-15-47-01.png](./images/2019-12-08-15-47-01.png)
+￼
+free提供的是Linux中系统级内存使用情况信息。它给出了相当完整的内存统计数据。
+
+## 用法示例
+
+不使用任何命令选项来调用free，能让你获得内存子系统的整体信息。
+
+如前所述，如果可能的话，Linux会使用所有可用的内存来缓存数据和应用程序。在清单3.10中，free告诉我们现在已经使用了234720字节的内存，但是，如果忽略缓冲区和缓存，那么就只使用了122772字节的内存。与之相反的是free列，当前我们有150428字节内存是空闲的，同样的，如果已经将缓冲区和缓存计算在内（这是可以的，因为在Linux需要使用这部分内存时，它会丢弃这些缓冲区），那么，我们有262376字节的空闲内存。
+
+清单3.10
+
+![2019-12-08-15-48-04.png](./images/2019-12-08-15-48-04.png)
+￼
+尽管你可以自己合计这些列，但是清单3.11所示的-t标志可以告诉你加上交换分区和实际内存的总数。在这个例子中，系统有376MB的物理内存和384MB的交换分区。系统可获得的内存总量为376MB加上384MB，即大约760MB。总的空闲内存计算方法为134MB的物理内存加上259MB的交换分区，产生总共393MB的空闲内存。
+
+清单3.11
+
+![2019-12-08-15-48-13.png](./images/2019-12-08-15-48-13.png)
+￼
+最后，free还能告诉你系统使用的高端和低端内存量。这主要用于具有1GB或更多物理内存的32位机器（如IA32）。（32位机器是唯一有高端内存的机器。）清单3.12展示了一个系统，该系统的空闲内存非常小，总共只有6MB。它显示出系统有876MB的低端内存和640MB的高端内存。同时，这个系统的缓存内存容量比缓冲内存容量大很多，这表明它可能更加积极地将数据写入硬盘，而不是长时间将其留在缓冲区里。
+清单3.12
+￼
+free很好地体现了系统内存是如何被使用的。虽然可能需要点时间来适应其输出格式，但是它包含了所有重要的内存统计信息。
+3.2.6 slabtop
+slabtop与top相似，但是它并不显示系统中进程的CPU和内存使用情况的信息，slabtop实时显示内核是如何分配其各种缓存的，以及这些缓存的被占用情况。在内部，内核有一系列的缓存，它们由一个或多个分片（slab）构成。每个分片包括一组
