--- Auto-Git Commit ---

--- a/Linux/Learning/Linux性能优化/第3章 性能工具: 系统内存/2. Linux性能工具: CPU与内存.md
+++ b/Linux/Learning/Linux性能优化/第3章 性能工具: 系统内存/2. Linux性能工具: CPU与内存.md
@@ -248,18 +248,77 @@ slabtop可以一窥Linux内核的数据结构。每一种分片类型都与Linux
 # sar（II）
 
 在对内存统计信息进行监控时，sar作为CPU性能工具的所有优势仍然存在，比如简单记录样本、提取多种输出格式、对样本加时间戳等。sar提供的信息与其他内存统计工具类似，比如空闲内存、缓冲区、高速缓存和交换分区总量的当前值。但是，它还会提供这些数值的变化率，以及当前消耗的物理内存和交换分区的百分比信息。
-3.2.7.1 内存性能相关的选项
+
+## 内存性能相关的选项
+
 sar使用如下命令行进行调用：
 ￼
+```
+sar [-B] [-r] [-R]
+```
+
 默认情况下，sar只显示CPU性能统计数据；因此，如果想要检索任何内存子系统的统计信息，你就需要使用表3-9给出的选项。
+
 表3-9 sar命令行选项
+
+![2019-12-08-16-01-26.png](./images/2019-12-08-16-01-26.png)
 ￼
 sar给出的Linux内存子系统的信息相当完整。sar强过其他工具的一点就是，除了绝对值之外，它还提供一些重要数值的变化率。你可以通过这些数值查看内存使用情况究竟是如何随时间变化的，而不用去找出这些值在样本之间的差异。表3-10给出了sar提供的内存统计信息。
+
 表3-10 sar内存统计信息
+
+![2019-12-08-16-01-36.png](./images/2019-12-08-16-01-36.png)
 ￼
 尽管sar没有高端和低端内存统计数据，但是它几乎提供了其他所有的内存统计信息。事实上，sar还能记录网络CPU和磁盘I/O的统计数据，这使得它非常强大。
-3.2.7.2 用法示例
+
+## 用法示例
+
 清单3.14展示了sar提供的关于当前内存子系统状态的信息。从这些结果我们可以看到系统使用的内存量占整个内存容量的比例变化范围为98.87%到99.25%。在观察期间，空闲内存量从11MB下降到7MB。被使用的交换分区百分比徘徊在11%左右。系统的数据缓存容量约为266MB，且大约有12MB的缓冲可以写到磁盘。
+
 清单3.14
 ￼
-清单3.15显示在第一个样本期间，系统使用空闲内存的速率约为每秒82个页面。然后系统释放了
+![2019-12-08-16-03-26.png](./images/2019-12-08-16-03-26.png)
+
+清单3.15显示在第一个样本期间，系统使用空闲内存的速率约为每秒82个页面。然后系统释放了约16个页面，接着又使用了大约20个页面。观察期间只有一次缓冲页面数是增加的，速率为每秒2.02个页面。最后，缓存页面数减少了2.02，不过最终，它们增加的速率为每秒64.36个页面。
+
+清单3.15
+
+![2019-12-08-16-04-02.png](./images/2019-12-08-16-04-02.png)
+￼
+清单3.16显示，在第三个样本期间，系统从内存写了大约53个页面到磁盘。该系统的缺页数相对较高，这就意味着内存页面在被分配和使用。幸运的是，这些都不是主缺页，系统不必为了解决它们而去访问磁盘。
+
+清单3.16
+
+![2019-12-08-16-04-57.png](./images/2019-12-08-16-04-57.png)
+￼
+如你所见，sar是一个强大的工具，通过增加存档、时间戳和同步收集多种不同类型统计信息的能力，它增强了其他系统内存性能工具的功能。
+
+# /proc/meminfo
+
+Linux内核提供用户可读文本文件/proc/meminfo来显示当前系统范围内的内存性能统计信息，它提供了系统范围内内存统计数据的超集，包括了vmstat、top、free和procinfo的信息，但是使用起来有一定的难度。如果你想定期更新，就需要自己写一个脚本或一些代码来实现这个功能。如果你想保存内存性能信息或是将其与CPU统计信息相协调，就必须创建一个新的工具或是写一个脚本。尽管如此，/proc/meminfo提供的却是最完整的系统内存使用情况的信息。
+
+## 内存性能相关的选项
+
+/proc/meminfo中的信息可以用如下命令行来检索：
+
+```
+cat /proc/meminfo
+```
+￼
+这个命令显示的统计信息如表3-11所示。
+
+表3-11 /proc/meminfo内存统计信息（均以KB为单位）
+
+![2019-12-08-16-05-57.png](./images/2019-12-08-16-05-57.png)
+￼
+/proc/meminfo提供了大量的关于Linux内存子系统当前状态的信息。
+
+## 用法示例
+
+清单3.17是一个输出/proc/meminfo的例子。它给出的一些内存统计信息与我们在其他工具中看到的信息是相同的。但是有些统计数据则给出了新的信息。首先，Dirty项显示系统当前有24KB的数据等待写入磁盘。其次，Committed_AS项显示我们还需要更多一点的内存（需要的量为1068MB，而总量为1024MB），以避免出现可能的内存耗尽的情况。
+
+清单3.17
+
+![2019-12-08-16-06-14.png](./images/2019-12-08-16-06-14.png)
+￼
+/proc/meminfo收集的系统级Linux内存统计信息是最完整的。由于可以把它当作是一个文本文件，因此，任何自定义的脚本或程序都可以很容易地提取这些统计数据。
