--- Auto-Git Commit ---

--- a/Linux/Learning/Linux性能优化/第4章 性能工具: 特定进程CPU/2. 工具.md
+++ b/Linux/Learning/Linux性能优化/第4章 性能工具: 特定进程CPU/2. 工具.md
@@ -34,83 +34,161 @@ time [-V] application
 ![2019-12-08-16-18-52.png](./images/2019-12-08-16-18-52.png)
 
 清单4.2是time显示详细信息的例子。如同你看到的，这个输出比time的典型输出显示了更多的信息。遗憾的是，大部分统计数据都是零，因为Linux不支持它们。大多数情况下，详细模式下提供的信息与标准模式下提供的信息是一样的，但其统计信息的标签更具有描述性。在这个例子中，我们可以看到，进程运行时使用了15%的CPU，运行用户代码的时间为1.15秒，运行内核代码的时间为0.12秒。它累计有2087个主缺页故障，或需要访问磁盘的内存故障；有371个不需要访问磁盘的缺页故障。大量的主缺页故障表明，在应用程序试图使用内存时，操作系统在不断的访问磁盘，这极有可能意味着进行了大量的交换。
+
 清单4.2
+
+![2019-12-08-16-19-04.png](./images/2019-12-08-16-19-04.png)
 ￼
 请注意，bash shell有内置time命令，因此，如果你运行bash并在没有指定执行路径的情况下执行time，你将得到如下输出：
+
+![2019-12-08-16-19-23.png](./images/2019-12-08-16-19-23.png)
 ￼
 bash内置的time命令是很有用的，但是它提供的是进程执行信息的子集。
-4.2.2 strace
+
+# strace
+
 strace是当程序执行时，追踪其发起的系统调用的工具。系统调用是由或代表一个应用程序进行的Linux内核函数调用。strace可以展示准确的系统调用，它在确定应用程序是如何使用Linux内核的方面是相当有用的。在分析大型程序或你完全不懂的程序时，跟踪系统调用的频率和长度是特别有价值的。通过查看strace的输出，你可以了解应用程序如何使用内核，以及它依赖于什么类型的函数。
+
 如果你完全理解了一个应用程序，但是它有向系统库（如libc或GTK）发起了调用，那么此时，strace也是很有用的。在这种情况下，即使你知道应用程序是如何进行每一个系统调用的，库也可能会代表你的应用程序进行更多的系统调用。strace可以迅速告诉你这些库都进行了哪些调用。
+
 虽然strace主要用于跟踪进程与内核之间的交互，显示应用程序的每个系统调用的参数和结果，但是strace也可以提供不那么令人生畏的汇总信息。应用程序运行之后，strace会给出一个表格，显示每个系统调用的频率和该类型调用所花费的总的时间。这个表格可以作为理解你的程序与Linux内核之间交互的首个关键信息。
-4.2.2.1 CPU性能相关的选项
+
+## CPU性能相关的选项
+
 如下的strace调用对性能测试是最有用的：
 ￼
+```
+strace [-c] [-p pid] [-o file] [--help] [command [arg ...]]
+```
+
 如果strace不带任何选项运行，它将在标准错误输出上显示给定命令的所有的系统调用。在试图发现为什么应用程序在内核中花费了大量时间时，这是很有帮助的。表4-3说明了一些strace选项，它们在跟踪性能问题时也是有用的。
+
 表4-3 strace命令行选项
+
+![2019-12-08-16-21-20.png](./images/2019-12-08-16-21-20.png)
 ￼
 表4-4解释了strace汇总选项输出的统计信息。每一行输出都说明了特定系统调用的一组统计数据。
+
 尽管上述说明的选项是与性能调查最相关的，但是strace也可以对其跟踪的系统调用进行类型过滤。strace说明页和--help选项详细解释了用于选择要跟踪哪些系统调用的选项。对一般的性能优化，通常没有必要使用它们；不过如果需要的话，它们也是存在可用的。
+
 表4-4 与CPU相关的strace输出
+
+![2019-12-08-16-21-32.png](./images/2019-12-08-16-21-32.png)
 ￼
-4.2.2.2 用法示例
+## 用法示例
+
 清单4.3是用strace收集一个应用程序的系统调用统计信息的例子。如你所见，strace提供了对系统调用非常好的分析，这些调用是代表应用程序执行的，在这里，这个应用程序就是oowriter。本例中，我们查看oowriter是如何使用read系统调用的。我们看到read占用了20%的时间，共消耗了0.44秒。它被调用了2427次，平均下来，一次调用的时间为184微秒。在这些调用中，有26次返回了错误。
+
 清单4.3
+
+![2019-12-08-16-22-07.png](./images/2019-12-08-16-22-07.png)
 ￼
 strace善于跟踪进程，但是它在一个应用程序上运行时会产生一些开销。其结果就是，strace报告的调用次数可能会比它报告的每个调用的时间要更加可靠一些。应使用strace提供的次数作为调查的起点，而不是每个调用所花费时间的高度精确的测量值。
-4.2.3 ltrace
+
+# ltrace
+
 ltrace与strace的概念相似，但它跟踪的是应用程序对库的调用而不是对内核的调用。虽然ltrace主要用于提供对库调用的参数和返回值的精确跟踪，但是你也可以用它来汇总每个调用所花的时间。这使得你既可以发现应用程序有哪些库调用，又可以发现每个调用时间是多长。
+
 使用ltrace要小心，因为它会产生具有误导性的结果。如果一个库函数调用了另一个函数，则花费的时间要计算两次。比如，如果库函数foo()调用了函数bar()，则函数foo()的报告时间将是函数foo()代码运行的全部时间再加上函数bar()花费的时间。
+
 记住了这个注意事项，ltrace就还是揭示应用程序如何表现的有用的工具。
-4.2.3.1 CPU性能相关的选项
+
+## CPU性能相关的选项
+
 ltrace提供与strace相似的功能，其调用方法也和strace相近：
 ￼
+```
+ltrace [-c] [-p pid] [-o filename] [-S] [--help] command
+```
+
 在上面的调用中，command是你想要ltrace跟踪的命令。如果ltrace不带选项，它将在标准错误输出上显示所有的库调用。表4-5解释了与性能调查最相关的ltrace选项。
 ￼
-表4-5 ltrace命令行选项
+表4-5 ltrace命令行选项:
+
+![2019-12-08-16-22-45.png](./images/2019-12-08-16-22-45.png)
+
 同样的，汇总模式（summary mode）提供了应用程序执行期间的库调用的性能统计信息。表4-6说明了这些统计数据的含义。
+
 表4-6 与CPU相关的ltrace输出
+
+![2019-12-08-16-24-19.png](./images/2019-12-08-16-24-19.png)
 ￼
 就像strace, ltrace有大量的选项可以修改其跟踪的功能。ltrace的- -help命令描述了这些选项，详细情况见于ltrace说明页。
-4.2.3.2 用法示例
+
+## 用法示例
+
 清单4.4是ltrace运行于xeyes命令的简单例子。xeyes是一个XWindow应用程序，其功能是随着你的鼠标指针在屏幕上弹出一双眼睛。
+
 清单4.4
+
+![2019-12-08-16-24-50.png](./images/2019-12-08-16-24-50.png)
 ￼
 在清单4.4中，库函数XSetWMProtocols、hypot、XQeuryPointer分别占用了在库中所花总时间的18.65%、17.19%和12.06%。消耗时间第二多的函数hypot，其调用次数为702次，而消耗时间第一多的函数XSetWMProtocols，其调用次数仅为1次。除非我们的应用程序能够完全删去对XSetWMProtocols的调用，否则不管它需要多少时间，我们都会被这个时间所制约。我们最好将注意力转向hypot。这个函数的每次调用都是相对轻量级的，因此，如果我们能减少它的调用次数，就有可能加快该应用程序的速度。假如xeyes应用程序是一个性能问题，那么hypot也许是第一个要被调查的函数。起初，我们想确定hypot是做什么的，但是又不清楚它记录在什么地方。那么是否有可能，我们可以找出hypot属于哪个库，然后阅读这个库的文档。本例中，我们不必先去找库，因为hypot函数有说明页。运行man hypot就可以告诉我们，hypot函数计算两点之间的距离（斜边），它是数学库libm的一部分。但是，库中函数有可能是没有说明页的，因此，我们需要确定这些没有说明页的函数是属于哪个库的。遗憾的是，ltrace不会明显地表示一个函数是来自于哪个库的。要指出这一点，我们必须使用Linux工具ldd和objdump。首先，ldd用于显示一个动态链接的应用程序使用了哪些库。其次，objdump用于在每个库中查找给定的函数。在清单4.5中，我们用ldd来查看xeyes应用程序使用了哪些库。
+
 清单4.5
+
+![2019-12-08-16-25-44.png](./images/2019-12-08-16-25-44.png)
 ￼
 现在ldd命令已经显示了xeyes使用的库，我们可以用objdump命令来找出这些函数来自哪个库。在清单4.6中，我们在xeyes链接的每个库中查找hypot符号。objdump的选项-T列出了库依赖或提供的所有符号（主要是函数）。通过使用fgrep查看带有．text的输出行，我们可以发现是哪些库输出hypot函数。本例中，libm库是唯一含有hypot函数的库。
+
 清单4.6
+
+![2019-12-08-16-25-54.png](./images/2019-12-08-16-25-54.png)
 ￼
 下一步应该浏览xeyes源代码找出hypot是在哪里被调用的，如果可能的话，减少其调用的次数。或者还有一种方法，查看hypot的源，并尝试优化库的源代码。
 通过调查哪个库调用需要很长的时间来完成，ltrace使你能确定应用程序的每个库调用的成本。
-4.2.4 ps（进程状态）
+
+# ps（进程状态）
+
 ps是极好的跟踪运行进程的命令。
+
 它给出正在运行进程的详细的静态和动态统计信息。ps提供的静态信息包括命令名和PID，动态信息包括内存和CPU的当前使用情况。
-4.2.4.1 CPU性能相关的选项
+
+## CPU性能相关的选项
+
 ps有许多不同的选项，能检索正在运行中的应用程序的各种统计信息。下面的调用给出了与CPU性能最相关的选项，并将显示给定PID的信息：
+
+```
+ps [-o etime,time,pcpu,command] [-u user] [-U user] [PID]
+```
 ￼
 ps命令是出现最早的、功能丰富的用于提取性能信息的命令之一，因此，绝大多数人都会选择使用它。若只看全部功能的一个子集，它就更易于管理。表4-7包含了与CPU性能最相关的选项。
+
 表4-7 ps命令行选项
+
+![2019-12-08-16-28-03.png](./images/2019-12-08-16-28-03.png)
 ￼
 除了CPU统计信息之外，ps还提供了数量庞大的各种统计信息，其中的一些，比如进程的内存使用情况，将在后续章节中讨论。
-4.2.4.2 用法示例
+
+## 用法示例
+
 这个例子是一个测试程序，它使用了88%的CPU，运行了6秒，但是消耗的CPU时间只有5秒：
 
+![2019-12-08-16-28-15.png](./images/2019-12-08-16-28-15.png)
 ￼
 清单4.7中，我们没有调查具体进程的CPU性能，而是查看了特定用户运行的全部进程。这可能会揭示特定用户消耗的资源量的信息。本例中，我们查看用户netdump运行的所有进程。幸运的是，netdump是一个很单调的用户，它只运行了bash和top，其中，bash不占用任何CPU，而top只占用了0.5%的CPU。
+
 与time不同，ps使我们能监控当前正在运行的进程的信息。对于运行时间较长的工作，你可以用ps定期检查进程的状态（而不是在程序已经执行完后，用它来提供该程序执行的统计信息）。
+
 清单4.7
+
+![2019-12-08-16-28-39.png](./images/2019-12-08-16-28-39.png)
 ￼
-4.2.5 ld.so（动态加载器）
+# ld.so（动态加载器）
+
 执行一个动态链接应用程序时，首先运行的是Linux加载器ld.so。ld.so加载该应用程序所有的库，并将它使用的符号与库提供的函数关联起来。因为不同的库最初被链接到内存中的不同位置，这些位置还可能是重叠的，链接器需要对所有的符号进行排序，以确保每个符号都位于内存中的不同位置。一个符号从一个虚拟地址移动到另一个虚拟地址，就被称为重定位（relocation）。加载器做这项工作是需要时间的，如果它完全不用去做那就更好了。预链接应用程序的目标就是通过重排整个系统的系统库来完成这项工作，以保证它们不会相互重叠。需要进行大量重定位的应用程序可能没有被预链接过。
+
 Linux加载器的运行不需要用户进行任何干预，只需执行一个动态程序即可，它是自动运行的。虽然加载器的执行对用户来说是隐藏的，但是它的执行仍然要花时间，这就有可能会延长应用程序的启动时间。当你要了解加载器的统计信息时，加载器展示的是其工作量，以便你能弄清楚它是否是瓶颈。
-4.2.5.1 CPU性能相关的选项
+
+## CPU性能相关的选项
+
 对使用共享库的每一个Linux应用程序来说，ld命令的运行是不可见的。通过设置合适的环境变量，我们可以要求它显示其执行的信息。下面的调用会影响ld的执行：
 ￼
+
 加载器的调试能力完全用环境变量控制。表4-8是对这些变量的说明。
 ￼
 表4-8 ld环境变量
+
 表4-9解释了一些ld.so可以提供的统计信息。时间为时钟周期，要将它转换为墙钟时间，就必须除以处理器的时钟速度。（该信息见于cat/proc/cpuinfo。）
 ld能提供的信息有助于确定应用程序开始执行之前，设置动态库花费了多少时间。
 表4-9 与CPU相关的ld.so输出
