--- Auto-Git Commit ---

--- a/Linux/Learning/Linux性能优化/第4章 性能工具: 特定进程CPU/2. 工具.md
+++ b/Linux/Learning/Linux性能优化/第4章 性能工具: 特定进程CPU/2. 工具.md
@@ -184,37 +184,77 @@ Linux加载器的运行不需要用户进行任何干预，只需执行一个动
 
 对使用共享库的每一个Linux应用程序来说，ld命令的运行是不可见的。通过设置合适的环境变量，我们可以要求它显示其执行的信息。下面的调用会影响ld的执行：
 ￼
+```
+env LD_DEBUG=statistics,help LD_DEBUG_OUTPUT=filename <command>
+```
 
 加载器的调试能力完全用环境变量控制。表4-8是对这些变量的说明。
 ￼
 表4-8 ld环境变量
 
+![2019-12-08-16-31-10.png](./images/2019-12-08-16-31-10.png)
+
 表4-9解释了一些ld.so可以提供的统计信息。时间为时钟周期，要将它转换为墙钟时间，就必须除以处理器的时钟速度。（该信息见于cat/proc/cpuinfo。）
+
 ld能提供的信息有助于确定应用程序开始执行之前，设置动态库花费了多少时间。
+
 表4-9 与CPU相关的ld.so输出
+
+![2019-12-08-16-31-23.png](./images/2019-12-08-16-31-23.png)
 ￼
-4.2.5.2 用法示例
+## 用法示例
+
 在清单4.8中，我们运行一个应用程序，并用ld调试定义的环境变量。输出的统计信息保存在lddebug文件中。请注意，加载器显示了两组不同的统计数据。第一个显示了启动时发生的全部重定位，后一个则显示的是程序关闭后所有的统计信息。如果应用程序使用了函数这些可以是不同的值，比如使用函数dlopen，它允许共享库在程序开始执行后映射到该应用程序。本例中，我们看到加载器时间的83%都用在定位上。如果该应用程序已经预链接过，那么这个时间会下降到接近于零。
+
 清单4.8
+
+![2019-12-08-16-31-39.png](./images/2019-12-08-16-31-39.png)
 ￼
 如果ld被确定为延长启动时间的原因，那么可以通过减少应用程序依赖的库的数量或者是在系统上运行prelink的方法来缩短启动时间。
-4.2.6 gprof
+
+# gprof
+
 剖析Linux应用程序的一种强有力的方法是使用gprof分析命令。gprof可以展示应用程序的调用图，并采样该应用程序的时间都花在了哪里。gprof的工作方式是，首先编译你的应用程序，然后运行该应用程序生成一个采样文件。gprof是非常强大的，但是它需要应用源程序，并且增加了编译开销。尽管gprof可以确定函数被调用的精确次数，以及函数所花的大致时间，但是其编译将有可能改变应用程序的时间特性，延缓程序的执行。
-4.2.6.1 CPU性能相关的选项
+
+## CPU性能相关的选项
+
 要用gprof剖析一个应用程序，你必须访问应用程序源。然后还需用如下所示的gcc命令编译该程序：
+
+```
+gcc -gp -g3 -o app app.c
+```
 ￼
-首先，你必须用gcc的-gp选项来编译应用程序，开启剖析功能。须注意不要与可执行文件剥离，如果用-g3选项编译开启符号会更加有用。符号信息对使用gprof的源注释特性是必须的。当你运行被编译过的应用程序时，会生成一个输出文件。然后你可以用gprof命令来显示结果。gprof命令的调用如下：
+首先，你必须用gcc的-gp选项来编译应用程序，开启剖析功能。须注意不要与可执行文件剥离，如果用-g3选项编译开启符号会更加有用。符号信息对使用gprof的源注释特性是必须的。当你运行被编译过的应用程序时，会生成一个输出文件。然后你可以用gprof命令来显示结果。
+
+gprof命令的调用如下：
+
+```
+gprog [-p -flat-profile -q --graph --brie -A -annotated-source] app
+```
 ￼
 表4-10说明的选项指定了gprof显示的信息。
+
 表4-10 gprof命令行选项
+
+![2019-12-08-16-36-19.png](./images/2019-12-08-16-36-19.png)
 ￼
 对一个特定的剖析来说，并不是所有的输出统计信息都是可以得到的。哪个输出统计信息是可得的取决于应用程序是如何为了剖析而被编译的。
-4.2.6.2 用法示例
+
+## 用法示例
+
 用gprof剖析一个应用程序时，第一步是用剖析信息编译该程序。编译器（gcc）将剖析信息插入到应用程序中，该程序运行时，会被保存到名为gmon.out的文件里。burn测试程序相当简单。它清除了大范围的内存，然后调用了两个函数：a()和b()，这两个函数都要访问此内存区域。函数a()访问内存的频繁程度是函数b()的10倍。
+
 首先，我们编译该应用程序：
+
+```
+gcc -pg -g3 -o burn_gprof burn.c
+```
 ￼
 运行程序后，我们可以分析输出，如清单4.9所示。
+
 清单4.9
+
+![2019-12-08-16-39-06.png](./images/2019-12-08-16-39-06.png)
 ￼
 在清单4.9中，你可以看到gprof呈现的是我们已经知道的关于该应用程序的情况。程序有两个函数a()和b()。每个函数都调用了一次，a()完成的时间（91%）是b()完成时间（8.99%）的10倍。函数a()花费的时间为5.06秒，函数b()花费的时间为0.5秒。
 清单4.10给出了测试程序的调用图。输出中列出的<spontaneous>注释的含义如下：尽管gprof没有记录main()的任何样本，但它推断出main()必然已经运行，因为函数a()和b()都有采样，而main是代码中唯一调用它们的函数。gprof没有记录main()的任何样本，很可能是因为这个函数太短了。
