--- Auto-Git Commit ---

--- a/Linux/Learning/Linux性能优化/第4章 性能工具: 特定进程CPU/2. 工具.md
+++ b/Linux/Learning/Linux性能优化/第4章 性能工具: 特定进程CPU/2. 工具.md
@@ -257,50 +257,103 @@ gcc -pg -g3 -o burn_gprof burn.c
 ![2019-12-08-16-39-06.png](./images/2019-12-08-16-39-06.png)
 ￼
 在清单4.9中，你可以看到gprof呈现的是我们已经知道的关于该应用程序的情况。程序有两个函数a()和b()。每个函数都调用了一次，a()完成的时间（91%）是b()完成时间（8.99%）的10倍。函数a()花费的时间为5.06秒，函数b()花费的时间为0.5秒。
-清单4.10给出了测试程序的调用图。输出中列出的<spontaneous>注释的含义如下：尽管gprof没有记录main()的任何样本，但它推断出main()必然已经运行，因为函数a()和b()都有采样，而main是代码中唯一调用它们的函数。gprof没有记录main()的任何样本，很可能是因为这个函数太短了。
+
+清单4.10给出了测试程序的调用图。输出中列出的`<spontaneous>`注释的含义如下：尽管gprof没有记录main()的任何样本，但它推断出main()必然已经运行，因为函数a()和b()都有采样，而main是代码中唯一调用它们的函数。gprof没有记录main()的任何样本，很可能是因为这个函数太短了。
+
 清单4.10
+
+![2019-12-08-16-39-51.png](./images/2019-12-08-16-39-51.png)
 ￼
 最后，gprof可以对源代码进行注释，以展示每个函数调用的频率。请注意，清单4.11没有显示函数消耗的时间；取而代之，它显示的是函数被调用的次数。在gprof前面的例子中，a()实际时长是b()的10倍，因此优化时需要多加小心。不要认为被多次调用的函数实际上使用CPU的时间也多，而被调用次数少的函数消耗的CPU时间必然也少。
+
 清单4.11
+
+![2019-12-08-16-40-32.png](./images/2019-12-08-16-40-32.png)
 ￼
 gprof提供了一个很好的总结，可以显示应用程序中的函数以及源代码行运行的次数以及它们所花费的时间。
-4.2.7 oprofile（II）
+
+# oprofile（II）
+
 第2章中讨论过，你可以使用oprofile跟踪系统或应用程序中不同事件的位置。与gprof相比，oprofile是一个低开销的工具。与gprof不同，它在使用前不需要对应用程序进行二次编译。oprofile也可以测量gprof不支持的事件。目前，oprofile只支持那些gprof用内核补丁可以生成的调用图，而gprof能够在所有的Linux内核上运行。
-4.2.7.1 CPU性能相关的选项
+
+## CPU性能相关的选项
+
 2.2.8节讨论的oprofile涉及的是如何用oprofile开始进行剖析。本小节介绍的则是oprofile用于分析进程级采样结果的部分。
+
 oprofile有一系列工具来显示已收集的样本。第一个工具opreport显示的是样本在可执行文件和库的函数中分布情况。其调用形式如下：
+
+```
+opreport [-d --details -f --long-filenames -l --symbols -l] application
+```
 ￼
 表4-11解释了几个命令，它们能够修改由opreport提供的信息的等级。
+
 第二个你能用来提取性能样本信息的命令是opannotate。opannotate可以将样本对应到具体的源代码行或汇编指令。其调用形式如下：
 ￼
 表4-11 opreport命令行选项
+
+![2019-12-08-16-42-48.png](./images/2019-12-08-16-42-48.png)
 ￼
 表4-12说明了该调用的选项，它们能让你指定opannotate提供的确切信息。这里有一个忠告：由于处理器硬件计数器在源代码行和指令级上的限制，样本可能不会准确对应到引发它的那一行。不过，它们会很接近实际的事件。
+
 表4-12 opannotate命令行选项
+
+![2019-12-08-16-43-05.png](./images/2019-12-08-16-43-05.png)
 ￼
 使用opannotate和opreport时，指明应用程序的完整路径名总是最好的做法。如果不这样做，你可能会接收到一条神秘的错误信息（如果oprofile无法发现应用程序的样本）。默认情况下，在显示结果时，opreport只显示可执行文件名，这会与系统中多个有相同名称的可执行文件或库相混淆。因此，总是指定-f选项就可以让opreport显示应用程序的完整路径。
+
 oprofile还可以提供一个命令opgprof用于输出由oprofile收集的样本，其输出形式能被gprof理解。该命令的调用方式如下：
+
+```
+opgprof application
+```
 ￼
 该命令获取application的样本，并生成与gprof兼容的文件。之后，你就可以用gprof命令来查看该文件了。
-4.2.7.2 用法示例
+
+## 用法示例
+
 鉴于我们已经在2.2.8节中了解过oprofile，这里的例子向你展示的将是如何利用oprofile来跟踪源代码特定行的性能问题。本小节假设你已经用opcontrol命令启动了剖析。下一步就是运行有性能问题的程序。本例中，我们使用的是burn程序，就是在gprof示例中用过的程序。我们按如下方式启动测试程序：
+
+```
+# ./burn
+```
 ￼
 程序完成后，我们必须将oprofile的缓冲区转储到硬盘，否则样本对opreport将是不可用的。用如下命令完成这一步：
+
+```
+sudo opcontrol -d
+```
 ￼
 接着，在清单4.12中，我们要求opreport告诉我们与测试程序/tmp/burn相关的样本。这能让我们对该应用程序消耗的周期数有个总体映像。本例中，我们看到应用程序有9939个样本。如果我们深入oprofile工具，我们将了解这些样本是如何在burn程序中分布的。
+
 清单4.12
+
+![2019-12-08-16-46-25.png](./images/2019-12-08-16-46-25.png)
 ￼
-之后，在清单4.13中，我们想了解所有样本是属于burn程序中的哪些函数。由于我们使用了CPU_CLK_UNHANLTED事件，这大致对应于每个函数所花费的相对时间。通过查看输出，我们可以看到91%的时间花在了函数a()上，9%的时间花在了函数b()上。
+之后，在清单4.13中，我们想了解所有样本是属于burn程序中的哪些函数。由于我们使用了`CPU_CLK_UNHANLTED`事件，这大致对应于每个函数所花费的相对时间。通过查看输出，我们可以看到91%的时间花在了函数a()上，9%的时间花在了函数b()上。
+
 清单4.13
+
+![2019-12-08-16-46-33.png](./images/2019-12-08-16-46-33.png)
 ￼
 在清单4.14中，我们要求opreport展示哪些虚拟地址有对应的样本。本例中，看上去似乎位于地址0x0804838a的指令拥有75%的样本。但是，现在还不清楚这条指令是做什么的，或者为什么有这么多样本。
+
 清单4.14
 
+![2019-12-08-16-46-54.png](./images/2019-12-08-16-46-54.png)
+
 通常，对我们更加有用的是知道使用所有CPU时间的源代码行，而不是使用它的指令的虚拟地址。找出一条特定指令与源代码行之间的对应关系并不总是容易的事儿。因此，在清单4.15中，我们要求opannotate来做这项困难的工作，向我们展示相对于原始源代码的样本（而并非指令的虚拟地址）。
+
 清单4.15
+
+![2019-12-08-16-47-10.png](./images/2019-12-08-16-47-10.png)
 ￼
-正如你能在清单4.15中看到的一样，opannotate把大部分样本（86.59%）归因于函数a()中的for循环。可惜的是，for循环中这部分的代价并不会很高。对现代处理器来说，整数加上固定数的执行速度是非常快的。因此，oprofile报告的样本可能被归于错误的源代码行。而下面的代码行（test[i]++; ）其代价则非常高，因为它要访问内存子系统。这一行才应该是这些样本所对应的。
+正如你能在清单4.15中看到的一样，opannotate把大部分样本（86.59%）归因于函数a()中的for循环。可惜的是，for循环中这部分的代价并不会很高。对现代处理器来说，整数加上固定数的执行速度是非常快的。因此，oprofile报告的样本可能被归于错误的源代码行。而下面的代码行（`test[i]++;` ）其代价则非常高，因为它要访问内存子系统。这一行才应该是这些样本所对应的。
+
 有些超出oprofile控制的原因会导致它对样本的错误对应。首先，处理器并不总是精确中断于导致事件发生的那一行。这可能会让样本被归于事件源头附近的指令，而不是引发事件的那条指令。其次，当源代码被编译时，编译器常常为了让执行更有效率而重排指令。编译器完成优化后，代码也许就不是按照其编写的顺序来执行。不同的源代码行可能被重排和组合。其结果就是，特定的指令也许是多个源代码行的结果，或者甚至于是编译器生成的中间代码段，而这段中间代码在原始源代码中是不存在的。因此，当编译器优化代码，生成机器指令时，原始源代码行与生成的机器指令之间可能不再有一对一的映射关系。这就使得让oprofile（和调试器）指出每条机器指令究竟对应哪一行源代码变得困难重重，甚至于不可能。不过，oprofile还是试图尽可能的准确，因此，通常你可以看看高样本计数代码行的上下几行，就可以找出真正代价高的那行代码。如果需要，你可以用opannotate来显示确切的汇编指令，以及正在接收所有样本的虚拟地址。这有可能发现汇编指令在做什么，从而手动将它映射回你的原始源代码。oprofile的样本归属并不准确，但它通常是足够接近的。即使存在这些限制，oprofile提供的文件显示了大致的源代码行以供调查，一般说来，这就足够找出应用程序的速度慢在了哪里。
-4.2.8 语言：静态（C和C++）vs．动态（Java和Mono）
+
+# 语言：静态（C和C++）vs．动态（Java和Mono）
+
 大多数Linux性能工具都支持对静态语言（如C和C++）的分析，本章描述的所有工具都能运用于由这些语言编写的应用程序。工具ltrace, strace和time可运用于由动态语言编写的应用程序，比如Java、Mono、Python和Perl。但是剖析工具gprof和oprofile不能用于这些类型的应用程序。幸运的是，大多数动态语言提供了并不只针对Linux的剖析基础工具来生成相似类型的配置文件。
-对Java应用程序而言，如果运行java命令时带上了-Xrunhprof命令行选项，那么-Xrunhprof将对应用程序进行剖析。更多详细信息参见http://antprof.sourceforge.net/hprof.html。对Mono应用程序而言，如果mono可执行文件被传递了--profile标志，那么它将剖析该应用程序。更多详细信息参见http://www.mono-project.com/docs/advanced/performance-tips/。Perl和Python也有相似的剖析功能，Perl的Devel::DProf的说明见于网址http://perl.com/pub/a/2004/06/25/profiling.html，而Python的profiler的说明则见于新网址：https://docs.python.org/3/library/index.html。
+
+对Java应用程序而言，如果运行java命令时带上了-Xrunhprof命令行选项，那么-Xrunhprof将对应用程序进行剖析。更多详细信息参见 http://antprof.sourceforge.net/hprof.html 。对Mono应用程序而言，如果mono可执行文件被传递了--profile标志，那么它将剖析该应用程序。更多详细信息参见 http://www.mono-project.com/docs/advanced/performance-tips/ 。Perl和Python也有相似的剖析功能，Perl的Devel::DProf的说明见于网址 http://perl.com/pub/a/2004/06/25/profiling.html ，而Python的profiler的说明则见于新网址: https://docs.python.org/3/library/index.html 。
