--- a/Linux/Learning/Linux性能优化/第8章 实用工具: 性能工具助手/1. 性能工具助手.md
+++ b/Linux/Learning/Linux性能优化/第8章 实用工具: 性能工具助手/1. 性能工具助手.md
@@ -2,9 +2,11 @@
 
 # 自动执行和记录命令
 
-如同前面章节所述，**性能调查**中**最有价值的步骤**之一就是保存在**调查过程**中发出的**命令**和产生的**结果**。这使得你可以在之后对它们进行回顾并寻求新的见解。为了帮助实现这个目的，Linux提供了两个命令：tee和script，前者能将**工具的输出**保存为**文件**，后者能记录**每一个按键**和屏幕上的**每一个输出**。这些信息可以保存下来，便于之后查看或者创建脚本来自动执行测试。
+如同前面章节所述，**性能调查**中**最有价值的步骤**之一就是保存在**调查过程**中发出的**命令**和产生的**结果**。之后可以来回顾.
 
-自动执行命令很重要，因为它可以减少出错的机会，使你在思考问题时不需记住所有的细节。在你一次性键入又长又复杂的命令行之后，bash shell和watch命令都可以让你周期性地自动执行这些命令。在你保证了命令行的正确性后，bash和watch能够周期性地自动执行它们，不需要再次键入。
+为了帮助实现这个目的，Linux提供了**两个命令**：**tee**和**script**，前者能将**工具的输出**保存为**文件**，后者能记录**每一个按键**和屏幕上的**每一个输出**。这些信息可以保存下来，便于之后查看或者创建脚本来自动执行测试。
+
+之后，**bash shell**和**watch命令**都可以让你**周期性**地**自动执行**这些命令，不需要再次键入。
 
 # 性能统计信息的绘图与分析
 
