--- a/Linux/Learning/Linux性能优化/第8章 实用工具: 性能工具助手/1. 性能工具助手.md
+++ b/Linux/Learning/Linux性能优化/第8章 实用工具: 性能工具助手/1. 性能工具助手.md
@@ -4,13 +4,18 @@
 
 如同前面章节所述，**性能调查**中**最有价值的步骤**之一就是保存在**调查过程**中发出的**命令**和产生的**结果**。之后可以来回顾.
 
-为了帮助实现这个目的，Linux提供了**两个命令**：**tee**和**script**，前者能将**工具的输出**保存为**文件**，后者能记录**每一个按键**和屏幕上的**每一个输出**。这些信息可以保存下来，便于之后查看或者创建脚本来自动执行测试。
+Linux提供了**两个命令**：**tee**和**script**，
+
+* 前者能将**工具的输出**保存为**文件**，
+* 后者能记录**每一个按键**和屏幕上的**每一个输出**。
+
+这些信息可以保存下来，便于之后**查看**或者**创建脚本来自动执行测试**。
 
 之后，**bash shell**和**watch命令**都可以让你**周期性**地**自动执行**这些命令，不需要再次键入。
 
 # 性能统计信息的绘图与分析
 
-除了记录与自动化工具之外，Linux还提供了强大的分析工具帮助你理解性能统计数据的含义。尽管大多数性能工具可以把性能统计数据输出为文本，但是想要发现其中的模式和随时间变化的趋势并不总是件容易的事儿。Linux提供的gnumeric电子表格很强大，它可以对性能数据进行导入、分析和绘图。当你绘制数据图时，性能问题的原因可能会变得明晰，或者至少能揭示调查的新角度。
+Linux提供的**gnumeric电子表格**很强大，它可以对**性能数据**进行**导入**、**分析**和**绘图**。当你绘制数据图时，性能问题的原因可能会变得明晰，或者至少能揭示调查的新角度。
 
 # 调查应用程序使用的库
 
