--- Auto-Git Commit ---

--- a/Linux/Learning/Linux性能优化/第8章 实用工具: 性能工具助手/1. 性能工具助手.md
+++ b/Linux/Learning/Linux性能优化/第8章 实用工具: 性能工具助手/1. 性能工具助手.md
@@ -15,11 +15,15 @@ Linux提供了**两个命令**：**tee**和**script**，
 
 # 性能统计信息的绘图与分析
 
-Linux提供的**gnumeric电子表格**很强大，它可以对**性能数据**进行**导入**、**分析**和**绘图**。当你绘制数据图时，性能问题的原因可能会变得明晰，或者至少能揭示调查的新角度。
+Linux提供的**gnumeric电子表格**很强大，它可以对**性能数据**进行**导入**、**分析**和**绘图**。
 
 # 调查应用程序使用的库
 
-还有一些Linux的工具能使你确定应用程序使用了哪些库，以及显示给定库提供的所有函数。ldd命令给出一个特定应用程序使用的全部共享库的列表。在你想要跟踪被应用程序使用的库的数量和位置时，这个命令很有用。Linux中还有一个命令objdump，它可以在指定库或应用程序中搜索并显示其提供的全部函数。ltrace只能给出一个应用程序调用函数的名称，但是结合命令ldd和objdump，你就能够利用ltrace的输出来确定指定函数属于哪个库。
+**ldd命令**给出一个**特定应用程序**使用的**全部共享库的列表**。
+
+命令objdump可以在**指定库**或**应用程序**中搜索并显示**其提供的全部函数**。
+
+ltrace**只能**给出**一个应用程序**调用函数的名称，但是结合命令ldd和objdump，你就能够利用ltrace的输出来确定指定函数属于哪个库。
 
 # 创建和调试应用程序
 
