--- Auto-Git Commit ---

--- a/Linux/Learning/Linux性能优化/第8章 实用工具: 性能工具助手/1. 性能工具助手.md
+++ b/Linux/Learning/Linux性能优化/第8章 实用工具: 性能工具助手/1. 性能工具助手.md
@@ -1,6 +1,18 @@
+
+<!-- @import "[TOC]" {cmd="toc" depthFrom=1 depthTo=6 orderedList=false} -->
+
+<!-- code_chunk_output -->
+
+- [1. 自动执行和记录命令](#1-自动执行和记录命令)
+- [2. 性能统计信息的绘图与分析](#2-性能统计信息的绘图与分析)
+- [3. 调查应用程序使用的库](#3-调查应用程序使用的库)
+- [4. 创建和调试应用程序](#4-创建和调试应用程序)
+
+<!-- /code_chunk_output -->
+
 性能工具与其他Linux工具结合起来就能够显著提升其有效性和易用性。
 
-# 自动执行和记录命令
+# 1. 自动执行和记录命令
 
 如同前面章节所述，**性能调查**中**最有价值的步骤**之一就是保存在**调查过程**中发出的**命令**和产生的**结果**。之后可以来回顾.
 
@@ -13,18 +25,20 @@ Linux提供了**两个命令**：**tee**和**script**，
 
 之后，**bash shell**和**watch命令**都可以让你**周期性**地**自动执行**这些命令，不需要再次键入。
 
-# 性能统计信息的绘图与分析
+# 2. 性能统计信息的绘图与分析
 
 Linux提供的**gnumeric电子表格**很强大，它可以对**性能数据**进行**导入**、**分析**和**绘图**。
 
-# 调查应用程序使用的库
+# 3. 调查应用程序使用的库
 
 **ldd命令**给出一个**特定应用程序**使用的**全部共享库的列表**。
 
 命令objdump可以在**指定库**或**应用程序**中搜索并显示**其提供的全部函数**。
 
-ltrace**只能**给出**一个应用程序**调用函数的名称，但是结合命令ldd和objdump，你就能够利用ltrace的输出来确定指定函数属于哪个库。
+ltrace**只能**给出**一个应用程序调用函数的名称**，但是**结合命令ldd和objdump**，你就能够利用ltrace的输出来**确定指定函数属于哪个库**。
 
-# 创建和调试应用程序
+# 4. 创建和调试应用程序
 
-最后，Linux还为你提供了能够创建性能工具友好型应用程序的工具，以及交互式调试和调查运行中应用程序属性的工具。GNU编译器集（gcc）可以在应用程序中插入调试信息，以帮助oprofile找出某个具体性能问题对应的代码行和源文件。此外，GNU调试器（gdb）还可以用来查找被各种性能工具默认不可得的应用程序的运行时信息。
+**GNU编译器集（gcc**）可以在**应用程序**中**插入调试信息**，以帮助oprofile找出某个具体性能问题对应的**代码行**和**源文件**。
+
+此外，GNU调试器（gdb）还可以用来查找被各种性能工具默认不可得的应用程序的**运行时信息**。
