--- a/Linux/Learning/Linux性能优化/第8章 实用工具: 性能工具助手/2. 工具.md
+++ b/Linux/Learning/Linux性能优化/第8章 实用工具: 性能工具助手/2. 工具.md
@@ -1,20 +1,39 @@
-bash
+
+# bash
+
 bash是默认的Linux命令行shell，在你每次与Linux命令行交互时，最有可能使用它。bash通常有一个功能强大的脚本语言来创建shell脚本。不过这个脚本语言也可以从命令行调用，从而使你在性能调查过程中，能轻松地将一些比较繁琐的任务进行自动化。
-8.2.1.1 性能相关的选项
+
+## 性能相关的选项
+
 bash有一组命令可以一起使用，来周期性地运行特定命令。大多数Linux用户都把bash作为默认的shell，因此，只要登录到一台机器或打开一个终端就会出现bash提示。如果你没有使用bash，也可以键入bash来调用它。
+
 有了bash命令提示符后，你可以输入一系列的bash脚本命令来自动连续地执行特定命令。在使用特定命令周期性提取性能统计数据的情况下，这个功能非常有用。表8-1给出了这些脚本选项。
+
 表8-1 bash运行时脚本选项
+
+![2019-12-08-21-05-03.png](./images/2019-12-08-21-05-03.png)
 ￼
 bash极其灵活，它记录在bash手册中。虽然bash非常复杂，但是在使用它之前并不需要完全掌握它。
-8.2.1.2 用法示例
-虽然有些性能工具，如vmstat和sar，能周期性地更新性能统计信息，但是其他的命令，比如ps和ifconfig则不能。bash可以调用诸如ps或ifconfig命令来周期性地显示它们的统计数据。例如，在清单8.1中，我们要求bash在条件为true时执行while循环。由于true命令总是为真，因此这个while循环永远都不会结束。接着，在do命令后启动每次迭代之后都要执行的命令，这些命令要求bash休眠1秒钟，然后运行ifconfig来抽取eth0控制器的性能信息。不过，我们只关心接收数据包，因此，我们用grep搜索并显示字符串为“RX packets”的ifconfig输出。最后，执行done命令来告诉bash循环完成。由于true命令总是返回真，所以，该循环将一直执行直到用组合键<Ctrl-C>终止它。
+
+## 用法示例
+
+虽然有些性能工具，如vmstat和sar，能周期性地更新性能统计信息，但是其他的命令，比如ps和ifconfig则不能。bash可以调用诸如ps或ifconfig命令来周期性地显示它们的统计数据。例如，在清单8.1中，我们要求bash在条件为true时执行while循环。由于true命令总是为真，因此这个while循环永远都不会结束。接着，在do命令后启动每次迭代之后都要执行的命令，这些命令要求bash休眠1秒钟，然后运行ifconfig来抽取eth0控制器的性能信息。不过，我们只关心接收数据包，因此，我们用grep搜索并显示字符串为“RX packets”的ifconfig输出。最后，执行done命令来告诉bash循环完成。由于true命令总是返回真，所以，该循环将一直执行直到用组合键`<Ctrl-C>`终止它。
+
 清单8.1
+
+![2019-12-08-21-05-27.png](./images/2019-12-08-21-05-27.png)
 ￼
 利用清单8.1的bash脚本，可以查看到按秒更新的网络性能统计信息。同样的循环还可以用于监控其他的事件，只要将ifconfig命令修改为其他的命令即可，而通过修改休眠数值也能够改变更新时间间隔。这个简单的循环容易直接在命令行中键入，并且能够自动显示任何你感兴趣的性能统计数据。
-8.2.2 tee
+
+# tee
+
 tee是一个简单的命令，可以将命令的标准输出保存为文件并同时进行显示。在想要保存并同时查看性能工具输出的时候，tee是很有帮助的。比如，正在监控一个实时系统的性能统计信息的同时，保存这些数据以备将来对它们进行分析。
+
 8.2.2.1 性能相关的选项
+
 tee的调用命令行如下：
+
+
 ￼
 tee获取由<command>提供的输出，在将其保存到指定文件的同时也显示到标准输出设备。如果特别指定了-a选项，则tee会将输出添加到文件上，而不是覆盖文件。
 8.2.2.2 用法示例
