--- Auto-Git Commit ---

--- a/Linux/Learning/Linux性能优化/第8章 实用工具: 性能工具助手/2. 工具.md
+++ b/Linux/Learning/Linux性能优化/第8章 实用工具: 性能工具助手/2. 工具.md
@@ -12,31 +12,41 @@ bash是默认的Linux命令行shell。
 表8-1 bash运行时脚本选项
 
 ![2019-12-08-21-05-03.png](./images/2019-12-08-21-05-03.png)
-￼
-bash极其灵活，它记录在bash手册中。虽然bash非常复杂，但是在使用它之前并不需要完全掌握它。
 
 ## 用法示例
 
-虽然有些性能工具，如vmstat和sar，能周期性地更新性能统计信息，但是其他的命令，比如ps和ifconfig则不能。bash可以调用诸如ps或ifconfig命令来周期性地显示它们的统计数据。例如，在清单8.1中，我们要求bash在条件为true时执行while循环。由于true命令总是为真，因此这个while循环永远都不会结束。接着，在do命令后启动每次迭代之后都要执行的命令，这些命令要求bash休眠1秒钟，然后运行ifconfig来抽取eth0控制器的性能信息。不过，我们只关心接收数据包，因此，我们用grep搜索并显示字符串为“RX packets”的ifconfig输出。最后，执行done命令来告诉bash循环完成。由于true命令总是返回真，所以，该循环将一直执行直到用组合键`<Ctrl-C>`终止它。
+虽然有些性能工具，如**vmstat**和**sar**，能**周期性**地**更新性能统计信息**，但是其他的命令，比如**ps**和**ifconfig**则不能。**bash**可以调用诸如ps或ifconfig命令来**周期性**地**显示它们的统计数据**。
+
+例如，在清单8.1中，我们**只关心接收数据包**, 该循环将一直执行直到用组合键`<Ctrl-C>`终止它。
 
 清单8.1
 
-![2019-12-08-21-05-27.png](./images/2019-12-08-21-05-27.png)
-￼
-利用清单8.1的bash脚本，可以查看到按秒更新的网络性能统计信息。同样的循环还可以用于监控其他的事件，只要将ifconfig命令修改为其他的命令即可，而通过修改休眠数值也能够改变更新时间间隔。这个简单的循环容易直接在命令行中键入，并且能够自动显示任何你感兴趣的性能统计数据。
+```
+while true; do sleep 1; /sbin/ifconfig ens33 | grep "RX packets"; done;
+```
 
+![2019-12-10-09-19-23.png](./images/2019-12-10-09-19-23.png)
+
+利用上面脚本, 可查看**按秒更新**的**网络性能统计信息**. 
+￼
 # tee
 
-tee是一个简单的命令，可以将命令的标准输出保存为文件并同时进行显示。在想要保存并同时查看性能工具输出的时候，tee是很有帮助的。比如，正在监控一个实时系统的性能统计信息的同时，保存这些数据以备将来对它们进行分析。
+tee是一个简单的命令，可以将命令的标准输出**保存为文件**并**同时进行显示**。
 
-8.2.2.1 性能相关的选项
+## 性能相关的选项
 
 tee的调用命令行如下：
 
-
+```
+<command> | tee [-a] [file]
+```
 ￼
-tee获取由<command>提供的输出，在将其保存到指定文件的同时也显示到标准输出设备。如果特别指定了-a选项，则tee会将输出添加到文件上，而不是覆盖文件。
+tee获取由`<command>`提供的**输出**，在将其**保存到指定文件**的**同时也显示**到标准输出设备。
+
+如果特别指定了`-a`选项，则tee会将输出**添加到文件**上，而**不是覆盖文件**。
+
 8.2.2.2 用法示例
+
 清单8.2展示了用tee来记录vmstat的输出。如你所见，tee显示了vmstat生成的输出，并同时将其保存到文件/tmp/vmstat_out。保存vmstat的输出能让我们在将来的时间里对性能数据进行分析或绘图。
 清单8.2
 ￼
