--- Auto-Git Commit ---

--- a/Linux/Learning/Linux性能优化/第8章 实用工具: 性能工具助手/2. 工具.md
+++ b/Linux/Learning/Linux性能优化/第8章 实用工具: 性能工具助手/2. 工具.md
@@ -87,15 +87,39 @@ export TERM=dumb
 
 清单8.3
 
+```
+[root@lihaiwei ~]# script ps_output
+Script started, file is ps_output
+[root@lihaiwei ~]# ps
+   PID TTY          TIME CMD
+ 67932 pts/4    00:00:00 bash
+ 67965 pts/4    00:00:00 ps
+[root@lihaiwei ~]# exit
+Script done, file is ps_output
+```
+￼
+查看由script记录下的输出。如你所见，其中包含了**所有的命令**以及**生成的全部输出**。
 
-￼
-接下来，在清单8.4中可以查看由script记录下的输出。如你所见，其中包含了所有的命令以及生成的全部输出。
 清单8.4
+
+```
+[root@lihaiwei ~]# cat ps_output
+Script started on Tue 10 Dec 2019 09:39:08 AM CST
+[root@lihaiwei ~]# ps
+   PID TTY          TIME CMD
+ 67932 pts/4    00:00:00 bash
+ 67965 pts/4    00:00:00 ps
+[root@lihaiwei ~]# exit
+
+Script done on Tue 10 Dec 2019 09:39:22 AM CST
+```
 ￼
-script是一个非常有用的命令，用来记录会话过程中所有的交互。与现代硬盘容量相比，script产生的文件非常小。记录性能调查会话，并将其保存下来以备将来查看一直都是一个很棒的主意。往最坏的情况考虑，它会浪费一点点精力和磁盘空间来记录会话。往最好的情况考虑，被保存的会话可以在之后的时间查看，而不需要重新运行该会话被记录下的命令。
-8.2.4 watch
+# watch
+
 默认情况下，watch命令会每秒运行一条命令并将其输出显示到屏幕上。与那些不能周期性地显示更新结果的性能工具一起工作时，watch能发挥其作用。比如，有些工具，如ifconfig和ps，显示的是当前性能统计数据，然后退出。由于watch能周期性的执行命令并显示其输出，因此，通过观看屏幕就可以发现哪些统计数据发生了变化，以及它们的变化速率。
+
 8.2.4.1 性能相关的选项
+
 watch用如下命令行调用：
 ￼
 如果调用的时候不带参数，watch只会按秒显示给定命令的输出，直到你中断这个过程。默认输出通常很难发现一屏信息与另一屏信息的差异，因此，watch提供了选项来突出显示每个输出之间的不同。这样更容易发现每个采样之间的输出差异。表8-3对watch可接受命令行选项进行了说明。
