--- Auto-Git Commit ---

--- a/Linux/Learning/Linux性能优化/第8章 实用工具: 性能工具助手/2. 工具.md
+++ b/Linux/Learning/Linux性能优化/第8章 实用工具: 性能工具助手/2. 工具.md
@@ -113,21 +113,39 @@ Script started on Tue 10 Dec 2019 09:39:08 AM CST
 
 Script done on Tue 10 Dec 2019 09:39:22 AM CST
 ```
+
+恢复
+
+```
+export TERM=xterm-256color
+```
 ￼
 # watch
 
-默认情况下，watch命令会每秒运行一条命令并将其输出显示到屏幕上。与那些不能周期性地显示更新结果的性能工具一起工作时，watch能发挥其作用。比如，有些工具，如ifconfig和ps，显示的是当前性能统计数据，然后退出。由于watch能周期性的执行命令并显示其输出，因此，通过观看屏幕就可以发现哪些统计数据发生了变化，以及它们的变化速率。
+**默认**情况下，watch命令会**每秒运行一条命令**并将其**输出显示到屏幕上**。与那些**不能周期性地显示更新结果的性能工具**一起工作时，watch能发挥其作用。
 
-8.2.4.1 性能相关的选项
+比如，有些工具，如**ifconfig**和**ps**，显示的是当前性能统计数据，然后退出。由于watch能周期性的执行命令并显示其输出，因此，通过观看屏幕就可以发现哪些统计数据发生了变化，以及它们的变化速率。
+
+## 性能相关的选项
 
 watch用如下命令行调用：
+
+```
+watch [-d[=cumulative]] [-n sec] <command>
+```
 ￼
-如果调用的时候不带参数，watch只会按秒显示给定命令的输出，直到你中断这个过程。默认输出通常很难发现一屏信息与另一屏信息的差异，因此，watch提供了选项来突出显示每个输出之间的不同。这样更容易发现每个采样之间的输出差异。表8-3对watch可接受命令行选项进行了说明。
+如果调用的时候**不带参数**，watch只会**按秒显示**给定命令的输出，直到你中断这个过程。
+
+**默认输出**通常很难发现一屏信息与另一屏信息的**差异**，因此，watch提供了选项来突出显示**每个输出之间的不同**。这样更容易发现**每个采样之间的输出差异**。表8-3对watch可接受命令行选项进行了说明。
+
 表8-3 watch命令行选项
+
+![2019-12-10-09-46-55.png](./images/2019-12-10-09-46-55.png)
 ￼
-watch是一种强大的工具，用于查看性能统计数据如何随时间变化。它并不复杂，但是却能很好地完成自己的工作。它真正填补了使用某些性能工具所造成的空白，这些工具无法周期性地显示已更新的输出。在使用这些工具时，你可以用窗口形式运行watch，通过定期查看该窗口来了解统计信息是如何变化的。
-8.2.4.2 用法示例
-清单8.5中的第一个例子展示了与ps命令一起使用的watch。我们要求ps给出每个进程产生的一般故障的数量。watch每10秒清除屏幕，并更新该信息。请注意，可能需要为你要求执行的命令加上引号，这样，watch就不会将你想要执行的命令的选项与它自身的选项搞混。
+## 用法示例
+
+清单8.5中的第一个例子展示了与ps命令一起使用的watch。我们要求ps给出每个进程产生的一般故障的数量。watch**每10秒清除屏幕**，并**更新该信息**。请注意，可能需要为你要求**执行的命令加上引号**，这样，watch就不会将你想要执行的命令的选项与它自身的选项搞混。
+
 清单8.5
 ￼
 watch作为一种工具，其基本功能可以很容易地编写为简单的shell脚本。但是，watch比使用shell脚本更简单，因为它几乎总是可用的，并且能正确地工作。别忘了，有些性能工具，如ifconfig或ps只能一次性地显示统计数据，而watch却能很容易地跟踪（只需看上一眼）统计数据的变化。
