--- Auto-Git Commit ---

--- a/Linux/Learning/Linux性能优化/第8章 实用工具: 性能工具助手/2. 工具.md
+++ b/Linux/Learning/Linux性能优化/第8章 实用工具: 性能工具助手/2. 工具.md
@@ -144,26 +144,59 @@ watch [-d[=cumulative]] [-n sec] <command>
 ￼
 ## 用法示例
 
-清单8.5中的第一个例子展示了与ps命令一起使用的watch。我们要求ps给出每个进程产生的一般故障的数量。watch**每10秒清除屏幕**，并**更新该信息**。请注意，可能需要为你要求**执行的命令加上引号**，这样，watch就不会将你想要执行的命令的选项与它自身的选项搞混。
+清单8.5中的第一个例子展示了与ps命令一起使用的watch。
+
+我们要求ps给出**每个进程产生的一般故障的数量**。watch**每10秒清除屏幕**，并**更新该信息**。请注意，可能需要为你要求**执行的命令加上引号**，这样，watch就不会将你想要执行的命令的选项与它自身的选项搞混。
 
 清单8.5
-￼
-watch作为一种工具，其基本功能可以很容易地编写为简单的shell脚本。但是，watch比使用shell脚本更简单，因为它几乎总是可用的，并且能正确地工作。别忘了，有些性能工具，如ifconfig或ps只能一次性地显示统计数据，而watch却能很容易地跟踪（只需看上一眼）统计数据的变化。
-8.2.5 gnumeric
-在进行性能问题调查时，性能工具常常会生成庞大的性能统计数据。有些时候，梳理这些数据并从中找出能够表明系统运行情况的趋势与模式就成了一个问题。通常电子表格，尤其是gnumeric，能够从三个不同的方面使得这个任务变得容易实现。
 
-首先，gnumeric提供了内置函数，比如求最大值、最小值、平均值和标准偏差，这就使你能对性能数据进行数值分析。其次，gnumeric提供了灵活的方式来导入许多性能工具常用输出的表格文本数据。最后，gnumeric还有一个强大的绘图工具，可以将性能工具生成的性能数据可视化。这不但对于探寻较长时间内的数据趋势是极有价值的，而且对于寻找不同类型数据之间的相关性（比如磁盘I/O与CPU使用量之间的相关性）也是相当有用的。通常，要从文本输出中找出模式是比较困难的，但对图形来说，系统行为就会显得更加清晰。其他的电子表格，如OpenOffice的oocalc，也可以使用，不过gnumeric强大的文本导入器和绘图工具使得它成为最容易被使用的工具。
-8.2.5.1 性能相关的选项
-使用电子表格帮助实现性能分析，只需完成以下步骤：
-1．将性能数据保存到文本文件。
-2．将文本文件导入到gnumeric。
-3．分析数据或用数据绘图。
-gnumeric可以生成多种不同类型的图形，并且提供了多种不同的函数实现数据分析。了解gnumeric的强大功能和灵活性的最好方法就是加载一些数据进行实验。
-8.2.5.2 用法示例
-要展示gnumeric的实用性，首先必须生成用于绘图和分析的性能数据。清单8.6要求vmstat生成100秒的输出，并将该信息保存到文本文件vmstat_output中。数据将会被加载到gnumeric。-n选项表示vmstat只显示头信息一次（而不是每屏信息都显示）。
-清单8.6
+```
+watch -n 10 "ps -o minflt,cmd"
+```
+
+![2019-12-10-09-55-28.png](./images/2019-12-10-09-55-28.png)
 ￼
-接下来，用如下命令启动gnumeric：
+# gnumeric
+
+**梳理数据**并从中找出能够表明**系统运行情况的趋势与模式**就成了一个问题。
+
+通常电子表格，尤其是**gnumeric**，能够从三个不同的方面使得这个任务变得容易实现。
+
+首先，gnumeric提供了**内置函数**，比如求**最大值**、**最小值**、**平均值**和**标准偏差**，这就使你能对性能数据进行**数值分析**。
+
+其次，gnumeric提供了灵活的方式来**导入**许多性能工具常用输出的表格文本数据。
+
+最后，gnumeric还有一个强大的**绘图工具**，可以将性能工具生成的**性能数据可视化**。
+
+其他的电子表格，如OpenOffice的**oocalc**，也可以使用，不过gnumeric强大的文本导入器和绘图工具使得它成为最容易被使用的工具。
+
+## 性能相关的选项
+
+使用电子表格帮助实现性能分析，只需完成以下步骤：
+
+1. 将**性能数据保存**到文本文件。
+2. 将**文本文件导入**到gnumeric。
+3. 分析数据或用数据绘图。
+
+gnumeric可以生成**多种不同类型的图形**，并且提供了**多种不同的函数**实现数据分析。
+
+## 用法示例
+
+要展示gnumeric的实用性，首先必须**生成**用于绘图和分析的**性能数据**。
+
+清单8.6要求**vmstat生成100秒的输出**，并将该信息保存到文本文件`vmstat_output`中。数据将会被加载到gnumeric。`-n`选项表示vmstat**只显示头信息一次**（而**不是每屏信息都显示**）。
+
+清单8.6
+
+```
+vmstat -n 1 100 > vmstat_output
+```
+￼
+接下来，用如下命令**启动gnumeric**：
+
+```
+gnumeric &
+```
 ￼
 这会打开一个空白电子表格用于导入vmstat数据。
 在gnumeric中选择File>Open，弹出一个对话框（图中未显示）用于选择打开的文件及该文件的类型。我们选择Text Import（Configurable）作为文件类型，然后通过一系列的向导对话框来选择将vmstat_output文件的哪一列映射到电子表格的哪一列。对vmstat而言，最好从第二行文本开始导入，因为第二行包含了列名称以及每一列适合的大小。此外，为导入数据选择Fixed-Width也是很有用的，其原因是vmstat就是这样输出数据的。在成功导入数据后，我们就会看到如图8-1所示的电子表格。
