--- Auto-Git Commit ---

--- a/Linux/Learning/Linux性能优化/第1章 性能追踪建议/2. 性能调查概要.md
+++ b/Linux/Learning/Linux性能优化/第1章 性能追踪建议/2. 性能调查概要.md
@@ -7,7 +7,7 @@
   - [1.1. 确定指标](#11-确定指标)
   - [1.2. 确定基线](#12-确定基线)
   - [1.3. 确定目标](#13-确定目标)
-- [2. 追踪问题](#2-追踪问题)
+- [2. 追踪相似问题](#2-追踪相似问题)
 - [3. 查看问题是否早已解决](#3-查看问题是否早已解决)
 - [4. 项目开始（启动调查）](#4-项目开始启动调查)
 - [5. 记录，记录，记录](#5-记录记录记录)
@@ -58,7 +58,7 @@
 >
 >性能追踪的**另一种方法**是选择在**特定时间段**内进行追踪，而**不是选择一个目标**。如果你要在有限的时间内优化一个应用程序，你可能会试着**修复那些最简单明显的问题**（低处的果实），而不是做一些更困难的、根本性的变化。
 
-# 2. 追踪问题
+# 2. 追踪相似问题
 
 使用**性能工具**为确定问题原因打开第一个口子。通过初始的粗略尝试，你能对问题形成大致的看法。
 
