--- Auto-Git Commit ---

--- a/Linux/Debug/编译模块.md
+++ b/Linux/Debug/编译模块.md
@@ -98,6 +98,10 @@ ln -snf /usr/src/kernels/`uname -r` /lib/modules/`uname -r`/build
 # 编译
 
 ```
+make -j8 CONFIG_KVM=m CONFIG_KVM_INTEL=m -C `pwd` M=`pwd`/arch/x86/kvm/ modules
+```
+
+```
 # make -C /lib/modules/`uname -r`/build M=`pwd` modules
 make: Entering directory `/usr/src/kernels/5.4.0'
   CC [M]  /data/linux/arch/x86/kvm/../../../virt/kvm/kvm_main.o
@@ -202,3 +206,7 @@ modprobe irqbypass
 insmod kvm.ko
 insmod kvm-intel.ko
 ```
+
+# 参考
+
+见脚本`make.sh`
