--- Auto-Git Commit ---

--- a/Virtualization/KVM/源码分析/2. 模块初始化以及创建虚拟机/1. KVM模块初始化.md
+++ b/Virtualization/KVM/源码分析/2. 模块初始化以及创建虚拟机/1. KVM模块初始化.md
@@ -4,7 +4,7 @@ KVM实际上就是KVM内核模块，包括kvm.ko、kvm\-intel.ko、kvm-amd.ko三
 
 首先，我们需要加载模块，当我们加载kvm\-xxx.ko模块时，会调用对应的module\_init()函数，然后调用vmx\_init()或者svm\_init()函数，最后进入到统一的kvm.ko模块中的kvm\_init()函数，现在正式进行虚拟机的初始化工作。
 
-![模块初始化](images/1.png)
+![2019-12-11-10-23-48.png](./images/2019-12-11-10-23-48.png)
 
 ```c
 //arch/x86/kvm/vmx/vmx.c
